# geofoncier-test

./: .commitlintrc.yml  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  EXERCICE_STEPS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci-frontend.yml  ci.yml  release.yml
analytics-service/: CHANGELOG.md  Dockerfile  coverage.xml  pyproject.toml
analytics-service/app/: config.py  constants.py  main.py  redis_client.py
analytics-service/app/middleware/: jwt.py
analytics-service/app/models/: task.py
analytics-service/app/routes/: analytics.py
analytics-service/app/schemas/: analytics.py
analytics-service/tests/: conftest.py  test_analytics.py  test_by_user.py  test_database.py  test_health.py  test_infrastructure.py  test_jwt_middleware.py  test_main.py  test_overdue.py  test_summary.py
auth-service/: Dockerfile  coverage.xml  pyproject.toml  requirements.txt
auth-service/app/: config.py  dependencies.py  exceptions.py  main.py  redis_client.py
auth-service/app/models/: __init__.py  associations.py  base.py  permission.py  refresh_token.py  role.py  user.py
auth-service/app/routes/: __init__.py  auth.py  permissions.py  roles.py  users.py
auth-service/app/schemas/: __init__.py  permissions.py  requests.py  responses.py  roles.py
auth-service/app/services/: __init__.py  auth_service.py  permission_service.py  role_service.py  token_service.py  user_service.py
auth-service/migrations/: env.py
auth-service/migrations/versions/: df336ce2bf33_create_auth_schema_tables.py
auth-service/tests/: conftest.py  helpers.py  test_auth.py  test_config.py  test_dependencies.py  test_jwks.py  test_login.py  test_logout.py  test_permission_service.py  test_permissions_routes.py  test_refresh.py  test_register.py  test_role_service.py  test_roles_routes.py  test_users_routes.py
backend/analytics-service/: Dockerfile  pyproject.toml
backend/analytics-service/app/: database.py
backend/analytics-service/app/routes/: analytics.py
backend/analytics-service/app/schemas/: analytics.py
backend/analytics-service/tests/: helpers.py  test_overdue.py  test_summary.py
backend/auth-service/: .env.example  CHANGELOG.md  Dockerfile  pyproject.toml
backend/auth-service/app/: config.py  database.py  dependencies.py  exceptions.py
backend/auth-service/app/models/: permission.py  user.py
backend/auth-service/tests/: conftest.py  test_auth_service.py  test_config.py  test_dependencies.py  test_jwks.py  test_login.py  test_main.py  test_models.py  test_password_service.py  test_permission_service.py  test_refresh.py  test_token_service.py  test_user_service.py  test_users_routes.py
backend/task-service/: .env.example  CHANGELOG.md  Dockerfile  pyproject.toml
backend/task-service/migrations/: env.py
backend/task-service/tests/: test_jwt_middleware.py  test_tasks.py
backend/test_e2e/: test_analytics.py  test_auth.py
docs/: DEVELOPMENT.md
e2e/: conftest.py  pyproject.toml  test_analytics.py  test_auth.py  test_cross_service.py  test_health.py  test_tasks.py
frontend/: .eslintrc.cjs  .gitignore  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/analytics-front/: package.json  vite.config.ts
frontend/analytics-front/src/: main.ts
frontend/auth-front/: index.html  package.json  vite.config.ts
frontend/auth-front/src/: main.ts
frontend/docs/: module-federation.md
frontend/nginx/: default.conf
frontend/shell-app/: package.json  tsconfig.json  vite.config.ts
frontend/shell-app/src/: App.vue  remotes.d.ts
frontend/src/: App.test.ts  App.vue  main.ts
frontend/src/__tests__/: helpers.ts  setup.ts
frontend/src/api/: analytics.test.ts  analytics.ts  auth.test.ts  auth.ts  client.test.ts  permissions.test.ts  permissions.ts  roles.test.ts  tasks.spec.ts  tasks.ts  users.test.ts
frontend/src/router/: index.test.ts  index.ts
frontend/src/stores/: auth.spec.ts  auth.test.ts  auth.ts  index.ts  tasks.spec.ts  tasks.ts
frontend/src/views/: AnalyticsView.test.ts  AnalyticsView.vue  HomeView.test.ts  HomeView.vue  LoginView.test.ts  LoginView.vue  PermissionsView.test.ts  PermissionsView.vue  RegisterView.test.ts  RegisterView.vue  RolesView.test.ts  RolesView.vue  TasksView.spec.ts  TasksView.vue  UsersView.test.ts  UsersView.vue
frontend/task-front/: package.json  tsconfig.node.json  vite.config.ts
frontend/task-front/src/: main.ts
init-db/: 01-schemas.sql
init-db/tasks/: 01-schema.sql
lib/: CHANGELOG.md  README.md  pyproject.toml
lib/geofoncier_shared/: testing.py
lib/geofoncier_shared/fastapi/: config_mixin.py
lib/tests/: test_config_mixin.py
openapi/: analytics-service.html  analytics-service.json  auth-service.html  auth-service.json  index.html  task-service.html  task-service.json
scripts/: generate_openapi.py  mock_data.py  mock_tasks.py  mock_users.py  release.sh  seed.py
shared/: pyproject.toml
shared/geofoncier_shared/fastapi/: __init__.py  jwt.py
shared/geofoncier_shared/fastapi/middleware/: jwt.py
shared/geofoncier_shared/fastapi/schemas/: auth.py
shared/geofoncier_shared/redis/: __init__.py  redis_client.py
shared/tests/: conftest.py  test_jwt.py  test_middleware_jwt.py  test_redis_client.py  test_rsa_key_pair.py  test_schemas_auth.py
task-service/: Dockerfile  alembic.ini  coverage.xml  pyproject.toml  requirements-dev.txt
task-service/alembic/: env.py
task-service/alembic/versions/: 0001_create_tasks.py
task-service/app/: config.py  database.py  main.py
task-service/app/middleware/: jwt.py
task-service/app/models/: __init__.py  task.py
task-service/app/repositories/: task.py
task-service/app/routes/: tasks.py
task-service/app/schemas/: auth.py  task.py
task-service/app/services/: task.py  task_service.py
task-service/migrations/versions/: a1b2c3d4e5f6_create_tasks_schema_tables.py
task-service/tests/: conftest.py  test_jwt_middleware.py  test_tasks.py
test_e2e/: conftest.py
(+23 files in other folders)
