[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "geofoncier"
version = "0.0.0"  # Root version not released – see per-service pyproject.toml
description = "Geofoncier – task management mono-repo"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "python-semantic-release>=9.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

# ---------------------------------------------------------------------------
# Ruff – linting & formatting (shared by all services)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ---------------------------------------------------------------------------
# Mypy – type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short -q"

# ---------------------------------------------------------------------------
# python-semantic-release – global defaults (inherited by every service via
# their own pyproject.toml; run `semantic-release` from the service directory)
# ---------------------------------------------------------------------------
[tool.semantic_release]
# Each service overrides this in its own pyproject.toml
commit_message = "chore(release): {version} [skip ci]"
major_on_zero = false
logging_use_named_masks = false
allow_zero_version = true

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.branches."release/*"]
match = "release/.*"
prerelease = false

[tool.semantic_release.commit_parser_options]
# Conventional Commits types that trigger a version bump
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
# Types that do NOT trigger a release
other_allowed_tags = ["chore", "docs", "style", "test", "ci", "build", "revert"]

[tool.semantic_release.remote]
type = "github"
# token is read from GH_TOKEN env var automatically

[tool.semantic_release.publish]
dist_glob_patterns = []  # Python services are not published to PyPI
upload_to_vcs_release = true
