[project]
name = "analytics-service"
version = "0.1.0"
description = "Geofoncier – analytics service (read-only aggregates)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

# ---------------------------------------------------------------------------
# python-semantic-release – analytics-service specific config
# Run from this directory: `semantic-release version`
# ---------------------------------------------------------------------------
[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
tag_format = "analytics-service/v{version}"
commit_message = "chore(release): analytics-service {version} [skip ci]"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"
exclude_commit_patterns = [
    "^chore\\(release\\):",
    "^chore: init",
    "Merge pull request",
    "Merge branch",
]

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "refactor"]
other_allowed_tags = ["chore", "docs", "style", "test", "ci", "build", "revert"]

[tool.semantic_release.publish]
dist_glob_patterns = []
upload_to_vcs_release = false
