[tool.poetry]
name = "e2e"
version = "0.1.0"
description = "End-to-end tests for geofoncier services"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pytest = ">=8.2"
pytest-asyncio = ">=0.23"
httpx = ">=0.27"
asyncpg = ">=0.29"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["."]
addopts = "-v --tb=short"
